<resources>
    <string name="app_name">太空漫读</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="text_load">直接输入文本</string>
    <string name="photo_load">拍照上传识别</string>
    <string name="file_load">上传txt文档识别</string>
    <string name="hint_load">选择上传文本方式</string>
    <string name="text_title">可读性测评</string>
    <string name="mark">开始评分</string>
    <string name="text_evaluation">编辑文本</string>
    <string name="result">识别结果</string>
    <string name="file_upload">文档上传</string>
    <string name="photo_upload">图片上传</string>
    <string name="result_title">测评结果</string>
    <string name="test">ehfwjdhjkfhaueuicnbhdibhfv uidshcfusidhuifchui uhduivchfsdjfhhu
dhfjavhfhsdjfhvdsjvhfsdknhcvufsdhnjv dhvjshdf hjsdh fjbv jbvjhsdhfsjdnvmcn jfhs vjksdbfjvb
sfj bsjhfb jvbkjdxfhbvsjdhb sduhjkvdbjhfdj
cvufsdhnjv dhvjshdf hjsdh fjbv jbvjhsdhfsjdnvmcn jfhs vjksdbfjvb
sfj bsjhfb jvbkjdxfhbvsjdhb sduhjkvdbjhfd
cvufsdhnjv dhvjshdf hjsdh fjbv jbvjhsdhfsjdnvmcn jfhs vjksdbfjvb
sfj bsjhfb jvbkjdxfhbvsjdhb sduhjkvdbjhfd
cvufsdhnjv dhvjshdf hjsdh fjbv jbvjhsdhfsjdnvmcn jfhs vjksdbfjvb
sfj bsjhfb jvbkjdxfhbvsjdhb sduhjkvdbjhfd</string>
    <string name="agreeProtocol">同意服务条款与隐私保护条例</string>
    <string name="spinnerPrompt">选择年级</string>
    <string name="user_input_hint">&#160;&#160;&#160;&#160;请输入用户名</string>
    <string name="password_input_hint">&#160;&#160;&#160;&#160;&#160;请输入密码</string>
    <string name="password_confirm_hint">确认密码</string>
    <string name="name_input_hint">&#160;&#160;&#160;&#160;请输入昵称</string>
    <string name="grade_select_hint">&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;请选择年级</string>
    <string name="jump_to_register_text">我要注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="language_select">语种选择</string>
    <string name="word_preview">单词预习</string>
    <string name="reading_comprehension">阅读理解</string>
    <string name="book_reading">绘本阅读</string>
    <string name="book">图 书</string>
    <string name="audio">音 频</string>
    <string name="video">视 频</string>
    <string name="show_more">更多</string>
    <string name="brief_introduction">简介</string>
    <string name="enter_video">进入视频</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="appKey">f2c0e499b2961d0a3b7f5c8d52f3a264</string>
    <string name="TextUrl">http://8.134.49.78:5000</string>
    <string name="levelUrl">http://8.134.49.78:8081</string>
    <string name="nav_title">分级词汇</string>
    <string name="personal_center">个人中心</string>
    <string name="growth_trajectory">成长轨迹</string>
<string name="text_take_photo">拍照</string>
    <string name="text_load_picture">从相册选择</string>
    <string name="cancel">取消</string>
    <string name="register_hint">还没有账号？</string>
    <string name="user_hint">请输入用户名</string>
    <string name="password_hint">输入密码</string>
    <string name="remember_password">记住密码</string>
    <string-array name="tabNames">
        <item>"知识广场"</item>
        <item>"分级词汇"</item>
        <item>"可读性测评"</item>
        <item>"个人中心"</item>
    </string-array>
</resources>