<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".UI.LoginActivity">

    <Button
        android:id="@+id/btn_login"
        android:layout_width="112.4dp"
        android:layout_height="73.15dp"
        android:layout_marginTop="85dp"
        android:background="@drawable/login_box"
        android:text="@string/login"
        android:textColor="@color/text_color"
        android:textSize="24.38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@drawable/login_check_box_shape"
        android:checked="false"
        android:paddingLeft="6.09dp"
        android:text="@string/agreeProtocol"
        android:textColor="@color/colorText"
        android:textSize="14.24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        app:layout_constraintVertical_bias="0.290" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="@dimen/login_input_edit_width"
        android:layout_height="@dimen/login_input_edit_height"
        android:background="@drawable/login_input_edit_shape"
        android:drawableLeft="@drawable/phone"
        android:drawablePadding="38.27dp"
        android:hint="@string/user_input_hint"
        android:inputType="phone"
        android:textColorHint="@color/colorHint"
        android:textSize="@dimen/login_input_edit_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="@dimen/login_input_edit_width"
        android:layout_height="@dimen/login_input_edit_height"
        android:background="@drawable/login_input_edit_shape"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="39dp"
        android:hint="@string/password_input_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/colorHint"
        android:textSize="@dimen/login_input_edit_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user"
        app:layout_constraintVertical_bias="0.106" />

    <ImageView
        android:layout_width="146dp"
        android:layout_height="wrap_content"
        android:scaleType="fitCenter"
        android:src="@drawable/login_person"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/guideline37"
        app:layout_constraintTop_toBottomOf="@+id/et_password">

        <TextView
            android:id="@+id/to_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="13.35dp"
            android:text="@string/jump_to_register_text"
            android:textColor="#fff602"
            android:textSize="13.35sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.89dp"
            android:background="#fff602" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.82" />

</androidx.constraintlayout.widget.ConstraintLayout>