<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    tools:context=".UI.FileLoadEvaluationActivity">

    <include layout="@layout/nav_bar"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/text_view_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/scrollView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file_upload"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/text_view_margin_bottom"
        app:layout_constraintBottom_toTopOf="@+id/ib_load_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></TextView>
    <Button
        android:id="@+id/btn_file_score"
        android:layout_width="@dimen/btn_mark_width"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_mark"
        android:text="@string/mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17"></Button>

    <ImageButton
        android:id="@+id/ib_load_file"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginHorizontal="@dimen/text_evaluation_marginHorizontal"
        android:background="@drawable/bg_btn_upload"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        tools:layout_editor_absoluteX="22dp"></ImageButton>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/text_evaluation_marginHorizontal"
        android:background="@drawable/bg_btn_uploadway"
        android:padding="@dimen/text_evaluation_padding"
        app:layout_constraintBottom_toTopOf="@+id/guideline16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline15">

        <TextView
            android:id="@+id/tv_file_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_evaluation_padding"
            android:textSize="@dimen/edit_text_textSize" />
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.189" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3708" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.703" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.746" />
</androidx.constraintlayout.widget.ConstraintLayout>